--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
 							<i class=" aprova-website-1"></i>					
 						</div>
 						<h3><a href="#">Фишинг </a></h3>
-						<p>Lorem ipsum dolor ame elit, sed do eiusmod tempor incididunt  </p>		
+						<p>метод получения личных данных через поддельные веб-сайты или сообщения</p>		
 						<div class="witr_feature_btn2">
 							<a class="witr_btn_all_color" href="#">Read More</a>
 						</div>
