--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 		<link rel="stylesheet" type="text/css" href="style.css"/>
 		<link rel="stylesheet" type="text/css" href="assets/css/responsive.css"/>
 		<!-- modernizr js -->	
-        <script src="assets/js/vendor/modernizr-2.8.3.min.js"></script>		
-		
+        <script src="assets/js/vendor/modernizr-2.8.3.min.js"></script>				
     </head>
 <body>
 <div class="em40_header_area_main">
@@ -75,11 +74,11 @@
 													<li class="menu-item-has-children">
 														<a href="#">Главная</a>
 														<ul class="sub-menu">
-															<li><a href="#">Почему мы?</a></li>
-															<li><a href="#">Технологии</a></li>
-															<li><a href="#">Мы в СМИ</a></li>
-															<li><a href="#">Команда</a></li>
-															<li><a href="#">Отзывы</a></li>
+															<li><a href="#why">Почему мы?</a></li>
+															<li><a href="#tech">Технологии</a></li>
+															<li><a href="#press">Мы в СМИ</a></li>
+															<li><a href="#team">Команда</a></li>
+															<li><a href="#feedback">Отзывы</a></li>
 														</ul>
 													</li>
 													<li><a href="about">О нас</a></li>
@@ -389,7 +388,7 @@
 
 
 <!-- solutech_about_area -->
-<div class="solutech_about_area">
+<div class="solutech_about_area" id="why">
 	<div class="container">	
 		<div class="row">
 			<div class="col-lg-12">
@@ -470,7 +469,7 @@
 </div>
 			
 <!-- solutech_serivce_bg_area -->
-<div class="solutech_serivce_area serivce_bg">
+<div class="solutech_serivce_area serivce_bg" id="tech">
 	<div class="container">	
 		<div class="row">
 			<div class="col-lg-12">
@@ -596,7 +595,7 @@
 </div>
 
 <!-- solutech_project_area -->
-<div class="solutech_project_area">
+<div class="solutech_project_area" id="press">
 	<div class="containers">	
 		<div class="row">
 			<div class="col-lg-12">
@@ -702,7 +701,7 @@
 
 
 <!-- solutech_team_area -->
-<div class="solutech_team_area">
+<div class="solutech_team_area" id="team">
 	<div class="container">	
 		<div class="row">
 			<div class="col-lg-12">
@@ -1023,7 +1022,7 @@
 				<div class="witr_button_area button2">
 					<div class="witr_btn_style mr">
 						<div class="witr_btn_sinner">	
-							<a href="#" class="witr_btn">DISCOVER MORE</a>
+							<a href="#" class="witr_btn">Узнать больше</a>
 						</div>						
 					</div>
 				</div>
@@ -1179,7 +1178,7 @@
 </div>
 
 <!-- solutech_testimonial_bg_area -->
-<div class="solutech_testimonial_bg_area">
+<div class="solutech_testimonial_bg_area" id="feedback">
 	<div class="container">	
 		<div class="row">
 			<div class="col-lg-12">
