--- a/index.html
+++ b/index.html
@@ -1590,6 +1590,10 @@
         <script src="assets/js/jquery.meanmenu.js"></script>
         <script src="assets/js/ajax-mail.js"></script>		
         <script src="assets/js/theme.js"></script>
+
+		<!-- JivoSite -->
+		<script src="//code.jivo.ru/widget/HJXmV0T0BP" async></script>
+		<!-- /JivoSite -->
 	
 	</body>
 </html>
